# ABE_Cuda

./: .gitignore  CMakeLists.txt  CMakeListsTmp.txt  Makefile  add-ckks.cpp  add-ckks.cu  cmake_install.cmake  common.h  deneme.cpp  deneme.cu  deneme.cu.save  main.cu  test  test.cu
